--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-loader": "^1.9.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.1",
     "resolve-url-loader": "^2.1.0",
